force-app/main/default/objects/Case/fields/Acto_administrativo_de_imputacion_admini__c.field-meta.xml
<CustomField>
    <fullName>Acto_administrativo_de_imputacion_admini__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo tipo casilla, empleado en el objeto caso solo para tipo de registro Expedientes legales</description>
    <label>Acto administrativo de imputación</label>
    <type>Checkbox</type>
</CustomField>