force-app/main/default/objects/Case/fields/Acto_administrativo_de_imputacion_fecha__c.field-meta.xml
<CustomField>
    <fullName>Acto_administrativo_de_imputacion_fecha__c</fullName>
    <description>Campo tipo lfecha,  empleado en el objeto caso solo para tipo de registro Expedientes legales</description>
    <label>Acto administrativo de imputación</label>
    <type>Date</type>
</CustomField>