force-app/main/default/objects/Case/fields/Acto_administrativo_de_imputacion_proces__c.field-meta.xml
<CustomField>
    <fullName>Acto_administrativo_de_imputacion_proces__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acto administrativo de imputación</label>
    <type>Checkbox</type>
</CustomField>