force-app/main/default/objects/Case/fields/Adherente__c.field-meta.xml
<CustomField>
    <fullName>Adherente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adherente</label>
    <type>Checkbox</type>
</CustomField>