force-app/main/default/objects/Case/fields/Agencia_asociado__c.field-meta.xml
<CustomField>
    <fullName>Agencia_asociado__c</fullName>
    <formula>Delegacion__r.Name</formula>
    <label>Agencia asociado</label>
    <type>Text</type>
</CustomField>