force-app/main/default/objects/Case/fields/Agencia_destino__c.field-meta.xml
<CustomField>
    <fullName>Agencia_destino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agencia destino</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Delegacion</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Agencia destino)</relationshipLabel>
    <relationshipName>Casos_agenciadestino</relationshipName>
    <type>Lookup</type>
</CustomField>