force-app/main/default/objects/Case/fields/Agrupacion1__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion1__c</fullName>
    <label>Agrupacion 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANU</fullName>
            </value>
            <value>
                <fullName>MEN</fullName>
                <default>true</default>
                <label>MEN</label>
            </value>
            <value>
                <fullName>SEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>