force-app/main/default/objects/Case/fields/Agrupacion3__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion3__c</fullName>
    <label>Agrupacion 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
                <default>true</default>
                <label>SC</label>
            </value>
            <value>
                <fullName>SR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>