force-app/main/default/objects/Case/fields/Alertas_disca_ID_pendientes__c.field-meta.xml
<CustomField>
    <fullName>Alertas_disca_ID_pendientes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alertas disca ID pendientes</label>
    <type>Checkbox</type>
</CustomField>