force-app/main/default/objects/Case/fields/Alertas_discapacidad_pendientes__c.field-meta.xml
<CustomField>
    <fullName>Alertas_discapacidad_pendientes__c</fullName>
    <formula>IF(Alertas_disca_ID_pendientes__c &amp;&amp; Alertas_disca_pendientes__c, &apos;Disca y Disca ID&apos;,
    IF(Alertas_disca_ID_pendientes__c, &apos;Disca ID&apos;,
        IF(Alertas_disca_pendientes__c, &apos;Disca&apos;,
    null)
    )
)</formula>
    <label>Alertas discapacidad pendientes</label>
    <type>Text</type>
</CustomField>