force-app/main/default/objects/Case/fields/Ap_autorizada__c.field-meta.xml
<CustomField>
    <fullName>Ap_autorizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se utiliza para marcar con un trigger cuando todas las alertas de todas las prestaciones se resuelven o no tienen alertas</description>
    <label>Ap autorizada</label>
    <type>Checkbox</type>
</CustomField>