force-app/main/default/objects/Case/fields/AP_Material__c.field-meta.xml
<CustomField>
    <fullName>AP_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP Material</label>
    <type>Checkbox</type>
</CustomField>