force-app/main/default/objects/Case/fields/AP_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>AP_Presupuesto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP Presupuesto</label>
    <type>Checkbox</type>
</CustomField>