force-app/main/default/objects/Case/fields/Apellidos__c.field-meta.xml
<CustomField>
    <fullName>Apellidos__c</fullName>
    <formula>Account.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellidos</label>
    <type>Text</type>
</CustomField>