force-app/main/default/objects/Case/fields/AporteFT__c.field-meta.xml
<CustomField>
    <fullName>AporteFT__c</fullName>
    <label>Aporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>