force-app/main/default/objects/Case/fields/Aque_obra_Social_Prepaga_se_cambia__c.field-meta.xml
<CustomField>
    <fullName>Aque_obra_Social_Prepaga_se_cambia__c</fullName>
    <label>¿A qué obra Social / Prepaga se cambia?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>