force-app/main/default/objects/Case/fields/Audiencia_conciliatoria__c.field-meta.xml
<CustomField>
    <fullName>Audiencia_conciliatoria__c</fullName>
    <description>Campo tipo lista, con dos posibles valores empleado en el objeto caso solo para tipo de registro Expedientes legales</description>
    <label>Audiencia conciliatoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Con acuerdo</fullName>
            </value>
            <value>
                <fullName>Sin Acuerdo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>