force-app/main/default/objects/Case/fields/automatizado_a_celula__c.field-meta.xml
<CustomField>
    <fullName>automatizado_a_celula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>campo creado para marcar cuando se automatizo la celula por algun criterio, ya que luego se deberia poder derivar manual.</description>
    <label>automatizado a celula</label>
    <type>Checkbox</type>
</CustomField>