force-app/main/default/objects/Case/fields/Autos__c.field-meta.xml
<CustomField>
    <fullName>Autos__c</fullName>
    <label>Autos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>