force-app/main/default/objects/Case/fields/Baja_domicilio__c.field-meta.xml
<CustomField>
    <fullName>Baja_domicilio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado en la solicitud de datos particulares</description>
    <inlineHelpText>Permite eliminar el domicilio del asociado</inlineHelpText>
    <label>Baja domicilio</label>
    <type>Checkbox</type>
</CustomField>