force-app/main/default/objects/Case/fields/Baja_telefono__c.field-meta.xml
<CustomField>
    <fullName>Baja_telefono__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado en la solicitud de datos particulares</description>
    <inlineHelpText>Permite eliminar el teléfono del asociado</inlineHelpText>
    <label>Baja telefono</label>
    <type>Checkbox</type>
</CustomField>