force-app/main/default/objects/Case/fields/Bebe_nacido_en_sistema__c.field-meta.xml
<CustomField>
    <fullName>Bebe_nacido_en_sistema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bebe con documentación faltante</label>
    <type>Checkbox</type>
</CustomField>