force-app/main/default/objects/Case/fields/Bebe_sin_DNI__c.field-meta.xml
<CustomField>
    <fullName>Bebe_sin_DNI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bebe sin DNI</label>
    <type>Checkbox</type>
</CustomField>