force-app/main/default/objects/Case/fields/Borrar_tarjeta_debito_o_cobro_por_CBU__c.field-meta.xml
<CustomField>
    <fullName>Borrar_tarjeta_debito_o_cobro_por_CBU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo indica si se debe borrar el medio de cobro en SS</description>
    <label>Borrar tarjeta, débito o cobro por CBU</label>
    <type>Checkbox</type>
</CustomField>