force-app/main/default/objects/Case/fields/Cambio_registro__c.field-meta.xml
<CustomField>
    <fullName>Cambio_registro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este check Se utiliza en process de consultas y reclamos para casos de tipos RES ya que para este tipo pueden cambiar el tipo de registro y no se vuelva a acticar la asigancion de SLA y cola</description>
    <label>Cambio registro</label>
    <type>Checkbox</type>
</CustomField>