force-app/main/default/objects/Case/fields/cambiort__c.field-meta.xml
<CustomField>
    <fullName>cambiort__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag utilizada para cerrar el SLA cuando cambia el tipo de registro de caso a tipificar.</description>
    <label>cambiort</label>
    <type>Checkbox</type>
</CustomField>