force-app/main/default/objects/Case/fields/Cantidad_de_meses__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_meses__c</fullName>
    <label>Otro periodo de bonificación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>