force-app/main/default/objects/Case/fields/caso_con_celula__c.field-meta.xml
<CustomField>
    <fullName>caso_con_celula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo flag para los casos derivados a celula</description>
    <label>caso con celula</label>
    <type>Checkbox</type>
</CustomField>