force-app/main/default/objects/Case/fields/Caso_Falseamiento_creado__c.field-meta.xml
<CustomField>
    <fullName>Caso_Falseamiento_creado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caso Falseamiento creado</label>
    <type>Checkbox</type>
</CustomField>