force-app/main/default/objects/Case/fields/Caso_material_creado__c.field-meta.xml
<CustomField>
    <fullName>Caso_material_creado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado para flag de caso material</description>
    <label>Caso material creado</label>
    <type>Checkbox</type>
</CustomField>