force-app/main/default/objects/Case/fields/caso_presupuesto_creado__c.field-meta.xml
<CustomField>
    <fullName>caso_presupuesto_creado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>campo flag creado para avisar que ya existe caso presupuesto creado</description>
    <label>caso presupuesto creado</label>
    <type>Checkbox</type>
</CustomField>