force-app/main/default/objects/Case/fields/Caso_Rechazado__c.field-meta.xml
<CustomField>
    <fullName>Caso_Rechazado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuando se rechazan todas las prestaciones te rechaza el caso</description>
    <label>Caso Rechazado</label>
    <type>Checkbox</type>
</CustomField>