force-app/main/default/objects/Case/fields/Categorizacion_SS__c.field-meta.xml
<CustomField>
    <fullName>Categorizacion_SS__c</fullName>
    <label>Categorización SS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baja complejidad</fullName>
            </value>
            <value>
                <fullName>Alta complejidad</fullName>
            </value>
            <value>
                <fullName>Posible preexistencia</fullName>
            </value>
            <value>
                <fullName>ACM / No nomencladas</fullName>
            </value>
            <value>
                <fullName>Cubiertos</fullName>
            </value>
            <value>
                <fullName>Cubiertos por PMI madre</fullName>
            </value>
            <value>
                <fullName>Cubiertos solo PMI hijo</fullName>
            </value>
            <value>
                <fullName>Cubierto con AP</fullName>
            </value>
            <value>
                <fullName>Cubierto solo por programa</fullName>
            </value>
            <value>
                <fullName>No cubiertos</fullName>
            </value>
            <value>
                <fullName>Cubiertos por provision</fullName>
                <label>Cubiertos por provisión</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>