force-app/main/default/objects/Case/fields/CBU__c.field-meta.xml
<CustomField>
    <fullName>CBU__c</fullName>
    <label>CBU</label>
    <length>22</length>
    <type>Text</type>
</CustomField>