force-app/main/default/objects/Case/fields/Cdigo_debito_por_ACA__c.field-meta.xml
<CustomField>
    <fullName>Cdigo_debito_por_ACA__c</fullName>
    <label>Código débito por ACA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>