force-app/main/default/objects/Case/fields/Celula__c.field-meta.xml
<CustomField>
    <fullName>Celula__c</fullName>
    <label>Célula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Celula 1</fullName>
                <label>Emi sin material</label>
            </value>
            <value>
                <fullName>Celula 2</fullName>
                <label>Trámites con material</label>
            </value>
            <value>
                <fullName>Celula 3</fullName>
                <label>Oxigenoterapia</label>
            </value>
            <value>
                <fullName>Celula 4</fullName>
                <label>Fertilidad</label>
            </value>
            <value>
                <fullName>Celula 5</fullName>
                <label>Célula 5</label>
            </value>
            <value>
                <fullName>Celula 6</fullName>
                <label>Programas</label>
            </value>
            <value>
                <fullName>Celula 7</fullName>
                <label>Medicación alto costo</label>
            </value>
            <value>
                <fullName>Celula 8</fullName>
                <label>Reintegros</label>
            </value>
            <value>
                <fullName>Celula 9</fullName>
                <label>Discapacidad</label>
            </value>
            <value>
                <fullName>Celula 10</fullName>
                <label>Célula 10</label>
            </value>
            <value>
                <fullName>Celula 11</fullName>
                <label>Falseamiento de DDJJ</label>
            </value>
            <value>
                <fullName>Celula 12</fullName>
                <label>IDOM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>