force-app/main/default/objects/Case/fields/celuladelevento__c.field-meta.xml
<CustomField>
    <fullName>celuladelevento__c</fullName>
    <label>celuladelevento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>