force-app/main/default/objects/Case/fields/Cobro_indebido__c.field-meta.xml
<CustomField>
    <fullName>Cobro_indebido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobro indebido</label>
    <type>Checkbox</type>
</CustomField>