force-app/main/default/objects/Case/fields/Codigo_de_asociado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_asociado__c</fullName>
    <formula>Account.Codigo_de_Afiliado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo de asociado</label>
    <type>Text</type>
</CustomField>