force-app/main/default/objects/Case/fields/Codigo_Diag__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Diag__c</fullName>
    <formula>Diagnostico__r.Codigo_del_Diagnostico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Diag</label>
    <type>Text</type>
</CustomField>