force-app/main/default/objects/Case/fields/Codigo_Empleador__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Empleador__c</fullName>
    <formula>Empleador__r.Codigo_de_empresa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Empleador</label>
    <type>Text</type>
</CustomField>