force-app/main/default/objects/Case/fields/Codigo_empresa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_empresa__c</fullName>
    <formula>TEXT(Account.Empresa_codigo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código empresa</label>
    <type>Text</type>
</CustomField>