force-app/main/default/objects/Case/fields/Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal__c</fullName>
    <label>Codigo postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>