force-app/main/default/objects/Case/fields/Codigo_Prescriptor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Prescriptor__c</fullName>
    <formula>Prescriptor__r.Codigo_de_efector__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Prescriptor</label>
    <type>Text</type>
</CustomField>