force-app/main/default/objects/Case/fields/Codigo_Prestador__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Prestador__c</fullName>
    <formula>Prestador__r.Codigo_de_efector__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Prestador</label>
    <type>Text</type>
</CustomField>