force-app/main/default/objects/Case/fields/Codigo_reintegro_SS__c.field-meta.xml
<CustomField>
    <fullName>Codigo_reintegro_SS__c</fullName>
    <externalId>true</externalId>
    <label>Código reintegro SS</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>