force-app/main/default/objects/Case/fields/Condicion_IVA__c.field-meta.xml
<CustomField>
    <fullName>Condicion_IVA__c</fullName>
    <label>Condicion IVA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RI-1</fullName>
                <label>Responsable Inscripto</label>
            </value>
            <value>
                <fullName>CF-4</fullName>
                <label>Consumidor Final</label>
            </value>
            <value>
                <fullName>M-4</fullName>
                <label>Monotributista</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>