force-app/main/default/objects/Case/fields/Contesta_Demanda_informe__c.field-meta.xml
<CustomField>
    <fullName>Contesta_Demanda_informe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contesta Demanda/informe</label>
    <type>Checkbox</type>
</CustomField>