force-app/main/default/objects/Case/fields/Contiene_alerta_AM__c.field-meta.xml
<CustomField>
    <fullName>Contiene_alerta_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contiene alerta AM</label>
    <type>Checkbox</type>
</CustomField>