force-app/main/default/objects/Case/fields/Correo_asociado__c.field-meta.xml
<CustomField>
    <fullName>Correo_asociado__c</fullName>
    <label>Correo asociado</label>
    <type>Email</type>
</CustomField>