force-app/main/default/objects/Case/fields/Correo_de_la_Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Correo_de_la_Delegacion__c</fullName>
    <description>Campo Fórmula para utilizar en Email Template - JIRA DES 3943 Email de la Delegación asociada al Caso</description>
    <formula>Delegacion__r.Correo_electronico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo de la Delegacion</label>
    <type>Text</type>
</CustomField>