force-app/main/default/objects/Case/fields/Correo_electronico_responsable__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_responsable__c</fullName>
    <label>Correo electronico responsable</label>
    <type>Email</type>
</CustomField>