force-app/main/default/objects/Case/fields/Correo_enviado__c.field-meta.xml
<CustomField>
    <fullName>Correo_enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se utiliza para que envie el correo una sola vez al cambiar el registro en consultas y reclamos porque hay un trigger que activa el process varias veces y envia correos simuntaneos</description>
    <label>Correo enviado</label>
    <type>Checkbox</type>
</CustomField>