force-app/main/default/objects/Case/fields/Correo_propietario_em__c.field-meta.xml
<CustomField>
    <fullName>Correo_propietario_em__c</fullName>
    <label>Correo propietario em</label>
    <type>Email</type>
</CustomField>