force-app/main/default/objects/Case/fields/correosreintegro__c.field-meta.xml
<CustomField>
    <fullName>correosreintegro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>campo usado para bajar el tiempo de procesamiento</description>
    <label>correosreintegro</label>
    <type>Checkbox</type>
</CustomField>