force-app/main/default/objects/Case/fields/Corresponsal__c.field-meta.xml
<CustomField>
    <fullName>Corresponsal__c</fullName>
    <description>Campo  tipo texto, que se usa en el objeto caso para los registros tipo Expedientes legales, en la sección &quot;datos del expediente&quot;</description>
    <label>Corresponsal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>