force-app/main/default/objects/Case/fields/Cuil__c.field-meta.xml
<CustomField>
    <fullName>Cuil__c</fullName>
    <label>CUIL/CUIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>