force-app/main/default/objects/Case/fields/CUIT__c.field-meta.xml
<CustomField>
    <fullName>CUIT__c</fullName>
    <label>CUIL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>