force-app/main/default/objects/Case/fields/CUIT_CUIL_Titular_CBU__c.field-meta.xml
<CustomField>
    <fullName>CUIT_CUIL_Titular_CBU__c</fullName>
    <description>Campo se utiliza en el tipo de registro Interfaz Financiera en la seccion de pago</description>
    <label>CUIT/CUIL Titular CBU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>