force-app/main/default/objects/Case/fields/Cuit_empleador__c.field-meta.xml
<CustomField>
    <fullName>Cuit_empleador__c</fullName>
    <label>Cuit empleador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>