force-app/main/default/objects/Case/fields/Cuota_actual__c.field-meta.xml
<CustomField>
    <fullName>Cuota_actual__c</fullName>
    <label>Cuota actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>