force-app/main/default/objects/Case/fields/Cuota_bonificada_sin_iva__c.field-meta.xml
<CustomField>
    <fullName>Cuota_bonificada_sin_iva__c</fullName>
    <label>Cuota bonificada sin iva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>