force-app/main/default/objects/Case/fields/Debe_sin_DNI__c.field-meta.xml
<CustomField>
    <fullName>Debe_sin_DNI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debe sin DNI</label>
    <type>Checkbox</type>
</CustomField>