force-app/main/default/objects/Case/fields/Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Delegacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegación</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Delegación</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>