force-app/main/default/objects/Case/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>