force-app/main/default/objects/Case/fields/Deriva_aportesFT__c.field-meta.xml
<CustomField>
    <fullName>Deriva_aportesFT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deriva aportes</label>
    <type>Checkbox</type>
</CustomField>