force-app/main/default/objects/Case/fields/Derivacion_de_lote__c.field-meta.xml
<CustomField>
    <fullName>Derivacion_de_lote__c</fullName>
    <label>Derivacion de lote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lote Vigente</fullName>
                <default>true</default>
                <label>Lote Vigente</label>
            </value>
            <value>
                <fullName>Lote Devolucion</fullName>
            </value>
            <value>
                <fullName>Lote Pendiente</fullName>
            </value>
            <value>
                <fullName>Lote Especial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>