force-app/main/default/objects/Case/fields/Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Destinatario__c</fullName>
    <label>Destinatario</label>
    <type>Email</type>
</CustomField>