force-app/main/default/objects/Case/fields/Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnóstico</label>
    <referenceTo>Diagnostico__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>