force-app/main/default/objects/Case/fields/Discapacidad__c.field-meta.xml
<CustomField>
    <fullName>Discapacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discapacidad</label>
    <type>Checkbox</type>
</CustomField>