force-app/main/default/objects/Case/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <label>DNI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>