force-app/main/default/objects/Case/fields/Documentacion_Pedida_al_Socio__c.field-meta.xml
<CustomField>
    <fullName>Documentacion_Pedida_al_Socio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JIRA DES-5052-SF-378. Campo utilizado para marcar el pedido de documentación efectuado al Asociados para casos de Solicitud de Baja</description>
    <label>Documentacion Pedida al Socio</label>
    <type>Checkbox</type>
</CustomField>